--- a/templates/config-wb-mr6cv3.json.jinja
+++ b/templates/config-wb-mr6cv3.json.jinja
@@ -99,6 +99,25 @@
                 "group": "g_safety"
             },
             {
+                "title": "Delays",
+                "fw": "1.24.0",
+                "id": "g_delays"
+            },
+            {
+                "title": "Startup Delay (s)",
+                "id": "gg_startup_delay_params",
+                "description": "startup_delay_description",
+                "fw": "1.24.0",
+                "group": "g_delays"
+            },
+            {
+                "title": "Restart Delay (s)",
+                "id": "gg_restart_delay_params",
+                "description": "restart_delay_description",
+                "fw": "1.24.0",
+                "group": "g_delays"
+            },
+            {
                 "title": "Curtains Control",
                 "description": "curtains_control_description",
                 "fw": "1.21.0",
@@ -427,6 +446,30 @@
                 ],
                 "condition": "isDefined(curtain{{curtain_num}}_mode)==0||curtain{{curtain_num}}_mode==0"
             },
+            "out{{out_num}}_startup_delay_params": {
+                "title": "Output {{out_num}}",
+                "group": "gg_startup_delay",
+                "address": {{1728 + out_num - 1}},
+                "reg_type": "holding",
+                "scale": 0.1,
+                "default": 0,
+                "min": 0,
+                "max": 999,
+                "fw": "1.24.0",
+                "condition": "isDefined(curtain{{curtain_num}}_mode)==0||curtain{{curtain_num}}_mode==0"
+            },
+            "out{{out_num}}_restart_delay_params": {
+                "title": "Output {{out_num}}",
+                "group": "gg_restart_delay",
+                "address": {{1736 + out_num - 1}},
+                "reg_type": "holding",
+                "scale": 0.1,
+                "default": 0,
+                "min": 0,
+                "max": 999,
+                "fw": "1.24.0",
+                "condition": "isDefined(curtain{{curtain_num}}_mode)==0||curtain{{curtain_num}}_mode==0"
+            },
             {% endfor -%}
             {% for curtain_num in range(1, CURTAINS_NUMBER + 1) -%}
             "curtain{{curtain_num}}_mode": {
@@ -445,26 +488,28 @@
             },
             "curtain{{curtain_num}}_open_time": {
                 "title": "Open time (s)",
+                "description": "curtain_zero_time_description",
                 "group": "gg_curtain_{{curtain_num}}",
                 "address": {{ 1328 + curtain_num - 1 }},
                 "reg_type": "holding",
                 "fw": "1.21.0",
                 "scale": 0.1,
                 "default": 10.0,
-                "min": 1.0,
+                "min": 0,
                 "max": 600.0,
                 "order": 2,
                 "condition": "curtain{{curtain_num}}_mode==1"
             },
             "curtain{{curtain_num}}_close_time": {
                 "title": "Close time (s)",
+                "description": "curtain_zero_time_description",
                 "group": "gg_curtain_{{curtain_num}}",
                 "address": {{ 1332 + curtain_num - 1 }},
                 "reg_type": "holding",
                 "fw": "1.21.0",
                 "scale": 0.1,
                 "default": 10.0,
-                "min": 1.0,
+                "min": 0,
                 "max": 600.0,
                 "order": 3,
                 "condition": "curtain{{curtain_num}}_mode==1"
@@ -715,6 +760,40 @@
                 "group": "gg_outputs_channels",
                 "condition": "curtain{{curtain_num}}_mode==1"
             },
+            {
+                "name": "Real State K{{out_num}}",
+                "reg_type": "discrete",
+                "address": {{96 + out_num - 1}},
+                "type": "switch",
+                "fw": "1.24.0",
+                "enabled": false,
+                "group": "gg_outputs_channels",
+                "condition": "isDefined(curtain{{curtain_num}}_mode)==0||curtain{{curtain_num}}_mode==0"
+            },
+            {
+                "name": "Startup Delay Countdown K{{out_num}}",
+                "reg_type": "input",
+                "address": {{1744 + out_num - 1}},
+                "type": "value",
+                "scale": 0.1,
+                "round_to": 0.1,
+                "fw": "1.24.0",
+                "enabled": false,
+                "group": "gg_outputs_channels",
+                "condition": "isDefined(curtain{{curtain_num}}_mode)==0||curtain{{curtain_num}}_mode==0"
+            },
+            {
+                "name": "Restart Delay Countdown K{{out_num}}",
+                "reg_type": "input",
+                "address": {{1752 + out_num - 1}},
+                "type": "value",
+                "scale": 0.1,
+                "round_to": 0.1,
+                "fw": "1.24.0",
+                "enabled": false,
+                "group": "gg_outputs_channels",
+                "condition": "isDefined(curtain{{curtain_num}}_mode)==0||curtain{{curtain_num}}_mode==0"
+            },
             {% endfor -%}
             {% for curtain_num in range(1, CURTAINS_NUMBER + 1) -%}
             {
@@ -834,8 +913,15 @@
                 "lp_hold_time_description": "If press is longer than the specified time then it is long",
                 "secp_waiting_time_description": "If there is no second press during the specified time then press is single. 0 - disables all presses except short and long. Adds a delay to the response to a short press",
                 "debounce_time_description": "For press detection must be 5-10 times less than second press waiting time. Adds a delay to the response to presses. Firmware up to 1.19.0 supports maximum 250 ms",
-                "curtains_control_description": "For setup buttons actions select \"Operate according to button mapping-matrix\" mode and configure actions for buttons"
+                "curtains_control_description": "For setup buttons actions select \"Operate according to button mapping-matrix\" mode and configure actions for buttons",
+                "curtain_zero_time_description": "If the time is 0, the curtain will run until a stop command is received",
 
+                {% for out_num in range(1, OUTPUTS_NUMBER + 1) -%}
+                "Command K{{out_num}}": "Command K{{out_num}}",
+                {% endfor -%}
+
+                "startup_delay_description": "0...999, factory default - 0",
+                "restart_delay_description": "0...999, factory default - 0"
             },
             "ru": {
                 "WB-MR6Cv3_template_title": "WB-MR6C v.3 (6-канальный модуль реле с внутренним блоком питания)",
@@ -864,6 +950,11 @@
                 "Output {{out_num}}": "Выход {{out_num}}",
                 "Output {{out_num}} Actions": "Действия для выхода {{out_num}}",
 
+                "K{{out_num}}": "Команда K{{out_num}}",
+                "Real State K{{out_num}}": "Фактическое состояние K{{out_num}}",
+
+                "Startup Delay Countdown K{{out_num}}": "Таймер задержки включения K{{out_num}}",
+                "Restart Delay Countdown K{{out_num}}": "Таймер задержки повторного включения K{{out_num}}",
                 {% endfor -%}
 
                 "Output Safe State": "Безопасное состояние выходов",
@@ -949,7 +1040,14 @@
                 "closing while pressed": "закрывать пока кнопка нажата",
                 "opening/closing while pressed": "открывать/закрывать пока кнопка нажата",
 
+                "Delays": "Задержки",
+                "Startup Delay (s)": "Задержка включения (с)",
+                "startup_delay_description": "0...999, заводское - 0",
+                "Restart Delay (s)": "Задержка повторного включения (с)",
+                "restart_delay_description": "0...999, заводское - 0",
+
                 "Curtains Control": "Управление шторами",
+                "curtain_zero_time_description": "Если время равно 0, штора будет двигаться до получения команды остановки",
                 "Open time (s)": "Время открытия (с)",
                 "Close time (s)": "Время закрытия (с)",
                 "Dead time (ms)": "Пауза при смене направления (мс)",
