--- a/templates/config-wb-mrm2-mini-nc.json.jinja
+++ b/templates/config-wb-mrm2-mini-nc.json.jinja
@@ -349,7 +349,7 @@
             },
             "out{{out_num}}_startup_delay_params": {
                 "title": "Output {{out_num}}",
-                "group": "gg_delays_startup_delay",
+                "group": "gg_startup_delay_params",
                 "order": {{out_num}},
                 "address": {{1728 + out_num - 1}},
                 "reg_type": "holding",
@@ -361,7 +361,7 @@
             },
             "out{{out_num}}_restart_delay_params": {
                 "title": "Output {{out_num}}",
-                "group": "gg_delays_restart_delay",
+                "group": "gg_restart_delay_params",
                 "order": {{out_num}},
                 "address": {{1736 + out_num - 1}},
                 "reg_type": "holding",
