--- a/templates/config-wb-mr6cu.json.jinja
+++ b/templates/config-wb-mr6cu.json.jinja
@@ -334,7 +334,9 @@
                 "scale": 0.1,
                 "enabled": false,
                 "group": "gg_startup_delay_params",
+                {% if curtain_num <= CURTAINS_NUMBER -%}
                 "condition": "out{{out_num}}_startup_delay_params>0"
+                {% endif -%}
             },
             {
                 "name": "Restart Delay Countdown K{{out_num}}",
@@ -346,7 +348,9 @@
                 "scale": 0.1,
                 "enabled": false,
                 "group": "gg_restart_delay_params",
+                {% if curtain_num <= CURTAINS_NUMBER -%}
                 "condition": "out{{out_num}}_restart_delay_params>0"
+                {% endif -%}
             },
             {% endfor -%}
             {% for curtain_num in range(1, CURTAINS_NUMBER + 1) -%}
