--- a/templates/config-wb-mai6-fw-2.2.json.jinja
+++ b/templates/config-wb-mai6-fw-2.2.json.jinja
@@ -1171,6 +1171,7 @@
                 "address": 304,
                 "format": "string",
                 "string_data_size": 16,
+                "enabled": false,
                 "group": "hw_info"
             },
             {
